<resources>
    <string name="app_name">FootballLeagueAplication</string>
    <string name="desc">Description</string>
    <string name="footbal_league">Football League</string>
    <string name="title_name">English Premier League</string>
    <string name="tab_standing">Standings</string>
    <string name="tab_text_1">Last Match</string>
    <string name="tab_text_2">Next Match</string>
    <string name="match_events">Match Events</string>
    <string name="lineups">Line-ups</string>
    <string name="overviews">Overview</string>
    <string name="schedule">Schedule</string>
    <string name="age">AGE</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="follow">Follow</string>
    <string name="Players">Players</string>
    <string name="overview">The Premier League (often referred to as the English Premier League (EPL) outside England), is the top
            level of the English football league system. Contested by 20 clubs, it operates on a system of promotion
            and relegation with the English Football League (EFL). The Premier League is a corporation in which the
            member clubs act as shareholders. Seasons run from August to May with each team playing 38 matches
            (playing each other home and away). Most games are played on Saturday and Sunday afternoons. \nThe Premier
            League has featured 47 English and two Welsh clubs since its inception, making it a cross-border league.
            \n\nThe competition was formed as the FA Premier League on 20 February 1992 following the decision of clubs in
            the Football League First Division to break away from the Football League, founded in 1888, and take
            advantage of a lucrative television rights deal. The deal was worth £1 billion a year domestically as
            of 2013–14, with BSkyB and BT Group securing the domestic rights to broadcast 116 and 38 games respectively.
            The league generates €2.2 billion per year in domestic and international television rights. In 2014–15,
            teams were apportioned revenues of £1.6 billion, rising sharply to £2.4 billion in 2016–17.
            \nThe Premier League is the most-watched sports league in the world, broadcast in 212 territories to 643
            million homes and a potential TV audience of 4.7 billion people. In the 2014–15 season, the average Premier
            League match attendance exceeded 36,000, second highest of any professional football league behind the
            Bundesliga\'s 43,500. Most stadium occupancies are near capacity. The Premier League ranks second in the
            UEFA coefficients of leagues based on performances in European competitions over the past five seasons,
            as of 2018.
            \n\nForty-nine clubs have competed since the inception of the Premier League in 1992. Six of them have won the
            title: Manchester United (13), Chelsea (5), Arsenal (3), Manchester City (3), Blackburn Rovers (1),
            and Leicester City (1). Following the 2003–04 season, Arsenal acquired the nickname "The Invincibles"
            as they became, and still remain, the only club to complete a Premier League campaign without losing a
            single game. The record of most points in a season is 100 by Manchester City in 2017–18.</string>
    <string name="title_activity_main_league">MainLeagueActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="competitions">Competitions</string>
    <string name="favorites">Favorites</string>
    <string name="match">Match</string>
    <string name="teams">Teams</string>
    <string name="team">Team</string>
    <string name="league">League</string>
    <string name="poster">Poster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="colon">:</string>
    <string name="image_banner">Image Banner</string>
    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string name="league_detail">League Detail</string>
    <string name="formed_year">Formed Year :</string>
    <string name="date_first_event">Date First Event :</string>
    <string name="country">Country :</string>
    <string name="description">Description :</string>
    <string name="website">Website :</string>
    <string name="facebook">Facebook :</string>
    <string name="twiter">Twiter :</string>
    <string name="youtube">Youtube :</string>
    <string name="title_activity_detail_match">DetailMatchActivity</string>
    <string name="homeposter">homePoster</string>
    <string name="awayposter">awayPoster</string>
    <string name="formations">Formations</string>
    <string name="shoots">Shoots</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="lines_up">Lines Up</string>
    <string name="defenses">Defenses</string>
    <string name="midfields">Midfields</string>
    <string name="forwards">Forwards</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="no_data">No Data</string>
    <string name="search_matchs">Search Matchs</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="team_badge">Team Badge</string>
    <string name="competitions_record">Competitions Record</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="drawn">Drawn</string>
    <string name="stadium">Stadium</string>
    <string name="jersey">Jersey</string>
    <string name="bullet">•</string>
    <string name="personal_information">Personal Information</string>
    <string name="country_of_birth">Country of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="league_team">League Team</string>
    <string name="national_team">National Team</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_signed">Date Signed</string>
    <string name="team_debut_date">Team Debut Date</string>
    <string name="personal_honors">Personal Honors</string>
    <string name="season">Season</string>
    <string name="honors">Honors</string>
    <string name="t">T</string>
    <string name="l">L</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="gd">GD</string>
    <string name="ga">GA</string>
    <string name="gf">GF</string>
    <string name="p">P</string>
    <string name="all_teams">All Teams</string>
    <string name="searchTeam">Search Team League</string>
    <string name="search_match_league">Search Match League</string>
</resources>